[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typeglide"
version = "0.3.7"
description = "A smooth typewriter text effect library for Python. Works with tkinter too! Made by Daksh Sharma who is easily known as Dakshu. Features: write, erase, save, animate_widget, erase_widget, type_and_erase."
readme = "README.md"
requires-python = ">=3.11.14"
authors = [
    { name="Dakshu", email="dakshumail98@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["typeglide"]
